[package]
name = "revol"
version = "0.1.0"
edition = "2021"

[dependencies]
force_graph = "0.3.2"
macroquad = "0.4.13"
pretty_env_logger = "0.5.0"

[lib]
name = "revol"
path = "src/lib.rs"
pretty_env_logger = "0.5.0"

[[bin]]
name = "revol"
path = "src/bin.rs"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "revol_bench"
harness = false
